[gd_scene load_steps=11 format=2]

[ext_resource path="res://Lowrez Dungeoncrawl Assets/Frog_Sprites/face_sprite_sheet.png" type="Texture" id=1]
[ext_resource path="res://Lowrez Dungeoncrawl Assets/Frog_Sprites/eyes_sprite_sheet.png" type="Texture" id=2]
[ext_resource path="res://GameScripts/Player.gd" type="Script" id=3]
[ext_resource path="res://Lowrez Dungeoncrawl Assets/UI/empty_bar.png" type="Texture" id=4]
[ext_resource path="res://Lowrez Dungeoncrawl Assets/UI/full_bar.png" type="Texture" id=5]

[sub_resource type="Animation" id=1]
resource_name = "Attack"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Eyes:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=2]
resource_name = "Heal"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Eyes:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.4, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 52, 12 ), Vector2( 52, 14 ), Vector2( 52, 12 ) ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "res://Lowrez Dungeoncrawl Assets/Sounds/gulp.wav" ],
"method": "play_sound"
} ]
}

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Eyes:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 51, 13 ), Vector2( 51, 11 ), Vector2( 52, 13 ), Vector2( 50, 10 ), Vector2( 52, 12 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 52, 12 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Eyes:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "set_face"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Eyes:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:self_modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "Blink"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Eyes:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 0 ]
}

[node name="Player" type="Sprite"]
position = Vector2( 52, 12 )
texture = ExtResource( 1 )
hframes = 9
frame = 6
script = ExtResource( 3 )

[node name="Eyes" type="Sprite" parent="."]
scale = Vector2( 1, 1.00893 )
texture = ExtResource( 2 )
hframes = 3

[node name="PlayerAnimator" type="AnimationPlayer" parent="."]
autoplay = "Resting"
anims/Attack = SubResource( 1 )
anims/Heal = SubResource( 2 )
anims/Hurt = SubResource( 3 )
anims/Resting = SubResource( 4 )

[node name="BlinkPlayer" type="AnimationPlayer" parent="."]
anims/Blink = SubResource( 5 )

[node name="ShiftyTimer" type="Timer" parent="."]
one_shot = true

[node name="TextureProgress" type="TextureProgress" parent="."]
margin_left = -6.0
margin_top = 6.0
margin_right = 7.0
margin_bottom = 9.0
max_value = 50.0
value = 50.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 5 )
nine_patch_stretch = true
stretch_margin_left = 1
stretch_margin_top = 1
stretch_margin_right = 1
stretch_margin_bottom = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="animation_finished" from="PlayerAnimator" to="." method="_on_PlayerAnimator_animation_finished"]
[connection signal="timeout" from="ShiftyTimer" to="." method="_on_ShiftyTimer_timeout"]
